Fixed features content text wrapping

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1710,7 +1710,7 @@ button {
     width: 100%;
   }
   .features__content {
-    max-width: 660px;
+    max-width: 610px;
     width: 100%;
   }
   .news__card {
