--- a/assets/sass/pages/_home.scss
+++ b/assets/sass/pages/_home.scss
@@ -282,7 +282,7 @@ button {
     width: 100%;
   }
   .features__content {
-    max-width: 660px;
+    max-width: 610px;
     width: 100%;
   }
   .news__card {
